# ToriDB

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  UPL-CE_License.md  UPL-License.md  compile_errors.txt  docker-compose.yml
.github/workflows/: build.yml
benchmarks/: run.js
client/: README.md  package-lock.json  package.json  reproduce_issue.js  rollup.config.js
client/src/: compiler.js  resp.js  sdk.js
doc/: ARCHITECTURE.md  BENCHMARKS.md  CLIENT.md  COMPARISON.md  NOSQL_MODEL.md  PROTOCOL.md  README.md  SECURITY_CLUSTER.md  SQL_MODEL.md
examples/: node_basic.js  node_nosql.js  node_sql.js  sdk_demo.js
lib/: sdk.js
src/: lib.rs  main.rs
src/core/: cluster.rs  executor.rs  flexible.rs  logger.rs  memory.rs  mod.rs  persistence.rs  registry.rs  replication.rs  security.rs  snapshot.rs  structured.rs  types.rs  uri.rs  worker.rs
src/net/: mod.rs  parser.rs  resp.rs
src/query/: mod.rs
tests/: test_acid.js  test_acl.js  test_advanced_sql.js  test_aof_replay.js  test_arrow_operator.js  test_collections.js  test_constraints.js  test_debug.js  test_json.js  test_json_column.js  test_json_index.js  test_kv.js  test_restore_snapshot.js  test_snapshot.js  test_sql.js  test_transactions.js  test_types.js  test_vectors.js
