[package]
name = "toridb"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bcrypt = "0.18.0"
bytes = "1.11.0"
crc32fast = "1.5.0"
dashmap = { version = "6.1.0", features = ["serde"] }
nom = "7.1"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
